# java-analyzer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.github/workflows/: rust-ci.yaml
benches/: parallel_completion.rs  salsa_performance.rs
crates/java-syntax/: Cargo.toml
docs/: README.md  architecture.md  development-guide.md  java-inlay-hints-design.md  jls-implementation-status.md  lombok-implementation.md  project-overview.md  salsa-quick-reference.md  semantic-pipeline.md
editors/code/: package.json  pnpm-lock.yaml
lib/rust-asm/: Cargo.toml
src/: build_integration.rs  completion.rs  decompiler.rs  index.rs  language.rs  lib.rs  logging.rs  lsp.rs  main.rs  request_metrics.rs  salsa_db.rs  salsa_queries.rs  semantic.rs  syntax.rs  workspace.rs
src/build_integration/: detection.rs  gradle.rs  model.rs  progress.rs  reload.rs  status.rs
src/completion/: candidate.rs  context.rs  engine.rs  fuzzy.rs  import_completion.rs  import_utils.rs  parser.rs  post_processor.rs  provider.rs  providers.rs  scorer.rs  type_resolver.rs
src/decompiler/: backend.rs  cache.rs
src/index/: bucket.rs  cache.rs  codebase.rs  handle.rs  jdk.rs  module_graph.rs  module_index.rs  scope.rs  source.rs  store.rs  view.rs  workspace_index.rs
src/language/: java.rs  kotlin.rs  rope_utils.rs  ts_utils.rs
src/lsp/: capabilities.rs  config.rs  converters.rs  handlers.rs  request_context.rs  semantic_tokens.rs  server.rs
tests/: incremental_parser.rs  lsp_integration.rs  request_cancellation.rs  semantic_lock_inversion.rs  stack_overflow_regression.rs
(+192 files in other folders)
